# pyffmpegcore

./: .gitignore  CLI_BETA_CHECKLIST.md  CLI_DISTRIBUTION.md  CLI_HELP.md  CLI_INSTALL.md  CLI_PLATFORM_NOTES.md  CLI_SPEC.md  DEVELOPMENT.md  EXAMPLES.md  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
examples/: adjust_video_speed.py  batch_convert_images.py  compress_with_progress.py  concatenate_videos.py  convert_video.py  extract_metadata.py  extract_thumbnail.py  generate_waveform.py  handle_subtitles.py  mix_audio.py  normalize_audio.py
pyffmpegcore/: __init__.py  __main__.py  cli.py  probe.py  progress.py  runner.py
pyffmpegcore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: build_cli_artifacts.py  validate_cli_install.py
tests/: __init__.py  cli_helpers.py  media_utils.py  mp4_utils.py  test_adjust_speed_real.py  test_cli_artifact_builder.py  test_cli_audio_workflows_real.py  test_cli_clean_install_script.py  test_cli_compress_real.py  test_cli_concat_real.py  test_cli_convert_real.py  test_cli_docs.py  test_cli_doctor.py  test_cli_errors.py  test_cli_extract_audio_real.py  test_cli_files.py  test_cli_help.py  test_cli_images_real.py  test_cli_installed_real.py  test_cli_installers.py  test_cli_output.py  test_cli_packaging.py  test_cli_probe_real.py  test_cli_smoke.py  test_cli_speed_real.py  test_cli_subtitles_real.py  test_cli_thumbnail_real.py  test_cli_waveform_real.py  test_compress_single_pass_real.py  test_compress_two_pass_real.py  test_convert_real.py  test_extract_audio_real.py  test_extract_thumbnail_real.py  test_generate_waveform_real.py  test_path_handling.py  test_probe.py  test_probe_real.py  test_progress.py  test_progress_real.py  test_repo_sanity.py  (+2 more)
tests/examples/: test_adjust_video_speed.py  test_audio_workflows_real.py  test_batch_convert_images.py  test_batch_convert_images_real.py  test_concatenate_videos.py  test_concatenate_videos_real.py  test_examples_smoke_real.py  (+5 more)
(+2 files in other folders)
